@@ -3620,7 +3620,8 @@ atom is referenced by the goal-term anyway.
 	    NEXT_INSTRUCTION;
 	  }
 	} else
-	{ PL_error(NULL, 0, NULL, ERR_TYPE, ATOM_callable, wordToTermRef(a));
+	{ lTop = (LocalFrame)argFrameP(next, 1);
+	  PL_error(NULL, 0, NULL, ERR_TYPE, ATOM_callable, wordToTermRef(a));
 	  goto b_throw;
 	}
 	goto i_usercall_common;
